added series id to info tab close #59

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -109,3 +109,6 @@ to_edit#:#Aufzeichnungen bereit zum Schneiden
 no_such_method#:#Keine solche Methode
 no_such_episode#:#Keine solche Episode
 series#:#Serie
+
+series_id#:#Serien Id
+opencast_information#:#Opencast Information
