--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -109,3 +109,6 @@ to_edit#:#Episodes ready to be trimmmed
 no_such_method#:#No such method
 no_such_episode#:#No such Episode
 series#:#series
+
+series_id#:#Series id
+opencast_information#:#Opencast information
