--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -42,6 +42,8 @@ mh_server#:#Base URL of the Opencast Server
 mh_server_engage#:#Base URL of the Opencast Engage Server
 mh_digest_user#:#Username of the Opencast Digest User
 mh_digest_password#:#Password of the Opencast Digest User
+oc_api_user#:#Username of the Opencast API User
+oc_api_password#:#Password of the Opencast API User
 xsendfile_header#:#Header for XSendfile-Feature
 distribution_directory#:#Distribution directory for ilias
 mh_directory#:#Base directory for Opencast (org.opencastproject.storage.dir)
