--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -48,7 +48,7 @@ mh_directory#:#Basisverzeichnis von Opencast (org.opencastproject.storage.dir)
 xsendfile_header#:#Header f&uuml;r XSendfile-Feature
 distribution_directory#:#Ilias Verteilungsverzeichnis
 upload_workflow#:#Workflow zum verarbeiten von Uploads
-trim_workflow#:#Workflow zum verarbeiten für den integrierten Video-Editor
+trim_workflow#:#Workflow zum verarbeiten f&#252;r den integrierten Video-Editor
 oc_api_setup_required#:#Opencast API setup erforderlich
 oc_publisher#:#Herausgeber
 saving_invoked#:#&Auml;nderungen erfolgreich gespeichert
