Updated trim player to improve usability

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -112,3 +112,8 @@ no_progress_bar#:#Derzeit ist während des Uploads keine Fortschrittsanzeige vor
 
 published#:# Veröffentlicht
 retracted#:# Unveröffentlicht
+
+setinpoint_to_current_player_time#:#Startpunkt auf aktuelle Videoposition setzen
+setoutpoint_to_current_player_time#:#Endpunkt auf aktuelle Videoposition setzen
+current_time#:#Aktuelle Position
+duration#:#Gesammtzeit
