Fix typo in german language

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -116,4 +116,4 @@ retracted#:# Unveröffentlicht
 setinpoint_to_current_player_time#:#Startpunkt auf aktuelle Videoposition setzen
 setoutpoint_to_current_player_time#:#Endpunkt auf aktuelle Videoposition setzen
 current_time#:#Aktuelle Position
-duration#:#Gesammtzeit
+duration#:#Gesamtzeit
