Add metadata editing

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -117,3 +117,5 @@ setinpoint_to_current_player_time#:#Startpunkt auf aktuelle Videoposition setzen
 setoutpoint_to_current_player_time#:#Endpunkt auf aktuelle Videoposition setzen
 current_time#:#Aktuelle Position
 duration#:#Gesamtzeit
+
+edit_metadata#:#Metadaten anpassen
